fix: requested changes 1